feat: site info add term of service and private policy
